--- a/BlogMVCApp/BlogMVCApp/Views/Shared/_Layout.cshtml
+++ b/BlogMVCApp/BlogMVCApp/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="/Blog">Blog</a>
+                        <a href="/Category">Category</a>
                     </li>
                 </ul>
             </div>
